# Universal-Boolean-Circuit

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.paper_draft/: relaxation_to_circuit_gap_theory_notes.text  soft_mixture_bool_circuit_plan.tex
configs/: bool_2bit_or_na.yaml  cfg_joint_mini.yaml  g16.yaml  g16_hardmi.yaml  g16_softmi.yaml  mini_baseline_test.yaml
data/: bench_default.jsonl  bench_default_ext_b20.jsonl  bench_default_ext_b20.jsonl.meta.json  bench_default_noise_add0.jsonl  bench_default_noise_add0.jsonl.meta.json  bench_default_noise_add2.jsonl  bench_default_noise_add2.jsonl.meta.json  bench_default_noise_add4.jsonl  bench_default_noise_add4.jsonl.meta.json  bench_default_noise_add6.jsonl  bench_default_noise_add6.jsonl.meta.json  bench_default_noise_add8.jsonl  bench_default_noise_add8.jsonl.meta.json  bench_default_plus_b1416_1600.jsonl  bench_default_plus_b1416_1600.jsonl.meta.json  bench_default_plus_b1416_added400.jsonl  bench_default_plus_b1416_added400.jsonl.meta.json  bench_default_plus_b1820_1600.jsonl  bench_default_plus_b1820_1600.jsonl.meta.json  bench_default_plus_b1820_added400.jsonl  bench_default_plus_b1820_added400.jsonl.meta.json  bench_min_g6.jsonl  bench_small_b10_2000.jsonl  bench_small_b10_2000.jsonl.meta.json  bench_small_b10_2000_noise_add0.jsonl  bench_small_b10_2000_noise_add0.jsonl.meta.json  bench_small_b10_2000_noise_add10.jsonl  bench_small_b10_2000_noise_add10.jsonl.meta.json  bench_small_b10_2000_noise_add2.jsonl  bench_small_b10_2000_noise_add2.jsonl.meta.json  (+19 more)
tests/: test_readout.py
(+90 files in other folders)
