[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ubcircuit"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "pyyaml>=6.0.1",
  "tqdm>=4.66",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "pandas>=2.2"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ubcircuit"]
